tests/ui/fail/repr/duplicate_repr_2.stderr
error: encountered duplicate `#[repr(uN)]` parameter: duplicate set to #[repr(u32)]
 --> tests/ui/fail/repr/duplicate_repr_2.rs:5:28
  |
5 | #[cfg_attr(not(test), repr(u32))]
  |                            ^^^

error: previous `#[repr(uN)]` parameter here
 --> tests/ui/fail/repr/duplicate_repr_2.rs:4:28
  |
4 | #[cfg_attr(not(test), repr(u32))]
  |                            ^^^
